--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,9 @@
         <selenium.support.version>3.14.0</selenium.support.version>
         <lombok.version>1.18.8</lombok.version>
         <javax.version>1</javax.version>
+        <cucumber.java.version>5.0.0</cucumber.java.version>
+        <cucumber.junit.version>5.0.0</cucumber.junit.version>
+        <cucumber.core.version>5.0.0</cucumber.core.version>
         <junit.version>4.12</junit.version>
         <maven.compiler.version>3.8.0</maven.compiler.version>
         <maven.checkstyle.version>3.1.0</maven.checkstyle.version>
@@ -63,6 +66,24 @@
             <groupId>javax.inject</groupId>
             <artifactId>javax.inject</artifactId>
             <version>${javax.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-core</artifactId>
+            <version>${cucumber.core.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>${cucumber.java.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>${cucumber.junit.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
