--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <cucumber.junit.version>5.0.0</cucumber.junit.version>
         <cucumber.core.version>5.0.0</cucumber.core.version>
         <junit.version>4.12</junit.version>
+        <gogle.guice.version>4.2.2</gogle.guice.version>
         <maven.compiler.version>3.8.0</maven.compiler.version>
         <maven.checkstyle.version>3.1.0</maven.checkstyle.version>
         <maven.pmd.version>3.12.0</maven.pmd.version>
@@ -66,6 +67,11 @@
             <groupId>javax.inject</groupId>
             <artifactId>javax.inject</artifactId>
             <version>${javax.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>${gogle.guice.version}</version>
         </dependency>
         <dependency>
             <groupId>io.cucumber</groupId>
