--- a/ConfigProject.properties
+++ b/ConfigProject.properties
@@ -1,19 +1,21 @@
 #Desired capabilities configuration
 #Change platform name using OS of device Android or iOS
-platform_name=
+platform.name=Android
 #Enter Device name for selected platform
-device_name=
+device.name=emulator-5554
+#Emulator or No, by default is emulator
+device.type=
 #Path to the Application
-app_path=//app//
+app.path=//app//qardio.apk
 #Enter application package in the device
-appPackage=
-#Enter application start activity
-startActivity=
-#Add credential for the base user
-base_user =
-base_user_password =
-#Test global timeout
+app.package=com.getqardio.android
+#Enter application start activity, by default can be empty
+start.activity=
+#Add credential for the base user, by default can be empty
+base.user.username = autotest.mdapi+canberk1@gmail.com
+base.user.password = Qwerty_123
+#Test global timeout, by default 30
 timeout =
 #Appium server address IP(without http) and Port
-appium_IP = 0.0.0.0
-appium_port = 4723
+appium.iP = 0.0.0.0
+appium.port = 4723
