--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,12 @@
         <selenium.support.version>3.14.0</selenium.support.version>
         <lombok.version>1.18.8</lombok.version>
         <javax.version>1</javax.version>
+        <gogle.guice.version>4.2.2</gogle.guice.version>
         <cucumber.java.version>5.0.0</cucumber.java.version>
         <cucumber.junit.version>5.0.0</cucumber.junit.version>
         <cucumber.core.version>5.0.0</cucumber.core.version>
         <junit.version>4.12</junit.version>
-        <gogle.guice.version>4.2.2</gogle.guice.version>
+        <assertj.core.version>3.12.2</assertj.core.version>
         <maven.compiler.version>3.8.0</maven.compiler.version>
         <maven.checkstyle.version>3.1.0</maven.checkstyle.version>
         <maven.pmd.version>3.12.0</maven.pmd.version>
@@ -95,6 +96,12 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj.core.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
