Fixes with initialization

--- a/ConfigProject.properties
+++ b/ConfigProject.properties
@@ -6,14 +6,14 @@ device.name=emulator-5554
 #Emulator or No, by default is emulator
 device.type=
 #Path to the Application
-app.path=//app//qardio.apk
+app.path=//app//
 #Enter application package in the device
-app.package=com.getqardio.android
+app.package=
 #Enter application start activity, by default can be empty
 start.activity=
 #Add credential for the base user, by default can be empty
-base.user.username = autotest.mdapi+canberk1@gmail.com
-base.user.password = Qwerty_123
+base.user.username =
+base.user.password =
 #Test global timeout, by default 30
 timeout =
 #Appium server address IP(without http) and Port
