[WIP] Side menu locators are halfway done

--- a/src/test/resources/iOSapplication.properties
+++ b/src/test/resources/iOSapplication.properties
@@ -1,13 +1,13 @@
 #Desired capabilities configuration
 #Change platform name using OS of device Android or iOS
-platform.name=Android
-platform.version=7.0
+platform.name=iOS
+platform.version=13.3
 #Enter Device name for selected platform
-device.name=emulator-5554
+device.name=iPhone 8
 #Emulator or No, by default is emulator
 device.type=
 #Path to the Application
-app.path=src/test/resources/app/HOS_android.apk
+app.path=/Users/admin/Desktop/iOS/HOS_iOS/HOS.app
 #Enter application package in the device
 app.package=com.iss.hos.phone
 #Enter application start activity, by default can be empty
@@ -18,5 +18,5 @@ base.user.password=qwer
 #Test global timeout, by default 30
 timeout=
 #Appium server address IP(without http) and Port
-appium.ip=0.0.0.0
+appium.ip=192.168.189.130
 appium.port=4723
