--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -7,14 +7,14 @@ device.name=emulator-5554
 #Emulator or No, by default is emulator
 device.type=
 #Path to the Application
-app.path=src/test/resources/app/qardio.apk
+app.path=src/test/resources/app/android.apk
 #Enter application package in the device
-app.package=com.getqardio.android
+app.package=com.iss.hos.phone
 #Enter application start activity, by default can be empty
-start.activity=
+start.activity=com.iss.hos.phone.activities.LoginActivity
 #Add credential for the base user, by default can be empty
-base.user.username=autotest.mdapi+canberk1@gmail.com
-base.user.password=Qwerty_123
+base.user.username=april17d
+base.user.password=qwer
 #Test global timeout, by default 30
 timeout=
 #Appium server address IP(without http) and Port
