Moved smoke test on new framework

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,20 +1,20 @@
 #Desired capabilities configuration
 #Change platform name using OS of device Android or iOS
 platform.name=Android
-platform.version=9.0
+platform.version=8.1
 #Enter Device name for selected platform
-device.name=emulator-5554
+device.name=AEJ7N18911003704
 #Emulator or No, by default is emulator
 device.type=
 #Path to the Application
-app.path=src/test/resources/app/qardio.apk
+app.path=src/main/resources/apps/travelcar.apk
 #Enter application package in the device
-app.package=com.getqardio.android
+app.package=com.travelcar.android.app.debug
 #Enter application start activity, by default can be empty
-start.activity=
+start.activity=com.travelcar.android.app.ui.home.HomeActivity
 #Add credential for the base user, by default can be empty
-base.user.username=autotest.mdapi+canberk1@gmail.com
-base.user.password=Qwerty_123
+base.user.username=april17d
+base.user.password=qwer
 #Test global timeout, by default 30
 timeout=
 #Appium server address IP(without http) and Port
