--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,7 +3,7 @@
 platform.name=Android
 platform.version=8.1
 #Enter Device name for selected platform
-device.name=AEJ7N18911003704
+device.name=RF8MC03W5YX
 #Emulator or No, by default is emulator
 device.type=
 #Path to the Application
